# lw_firmware

src/acr/: makefile.lwmk
src/acr/config/: Engines.pm  Features.pm  Makefile  acr-config  acr-config.cfg  acr-profiles.mk  makefile.mk
src/acr/halgen/: README.txt
src/acr/inc/: acr.h  acr_objacr.h  acr_objacrlib.h  acr_objse.h  acr_objsha.h  acr_signature.h  acrapm.h  acrse.h  acrsha.h  acrtypes.h  acrutils.h
src/acr/src/: acr_sanity.sh  as2_build.sh  build.sh  make-profile.lwmk  makefile.lwmk
src/acr/utilities/: acr_cov_config.sh  checkGlobalDataExceptiolWariables.sh  gen_class_os.pl  globalDataExceptions.pm
src/acr_riscv/config/: Engines.pm  Features.pm  Makefile  acr-config.cfg  acr-profiles.mk  makefile.mk
src/acr_riscv/inc/: acr.h  acr_objacr.h  acr_objse.h  acr_signature.h  acrdrfmacros.h  acrse.h  acrtypes.h  acrutils.h
src/acr_riscv/src/: acr_sanity.sh  build.sh  make-profile.lwmk  makefile.lwmk
src/acr_riscv/utilities/: acr_cov_config.sh  globalDataExceptions.pm  sec_enum_types.h
src/aws/config/: aws-profiles.mk
src/aws/src/: Makefile  main.c  make-profile.lwmk  makefile.lwmk
src/booter/config/: Engines.pm  Features.pm  Makefile  booter-config  booter-config.cfg  booter-profiles.mk  makefile.mk
src/booter/inc/: booter.h  booter_lsverif_keys_rsa3k.h  booter_objbooter.h  booter_objse.h  booter_objsha.h  booter_revocation.h  booter_signature.h  booter_static_inline_functions.h  booterse.h  bootersha.h  bootertypes.h  booterutils.h
src/booter/src/: Makefile  build.sh  make-profile.lwmk  makefile.lwmk
src/booter/utilities/: gen_class_os.pl
src/bootloader/config/: bl-profiles.mk
src/bootloader/inc/: hs_boot.h  hs_entry_checks.h  hsutils.h
src/bootloader/src/: hs_boot.sh  hs_entry_checks.c  hs_main.c  main.c  make-profile.lwmk  makefile.lwmk
src/bsigc6setup/: Makefile  make-profile.lwmk  makefile.lwmk
src/bsigc6setup/config/: bsigc6setup-profiles.mk
src/common/inc/: conditionalchecks.h  pmu_fbflcn_if.h
src/conf_compute/: Makefile  as2-release.sh  make-partition.lwmk  make-profile.lwmk  make-proxy.lwmk  makefile.lwmk  readme.txt
src/conf_compute/acr/: entry.S  main.c  rules.mk  sources.mk
src/conf_compute/attestation/: entry.S  main.c
src/conf_compute/config/: mpsk-profile-gsp-gh100.mk  profiles.mk
src/conf_compute/inc/: acr_sha.h  cc_dma.h  cc_rmproxy.h  cc_spdm.h  misc.h  partasmmacros.h  partctxasm.h  partitions.h  rpc.h
src/conf_compute/init/: entry.S  main.c
src/conf_compute/manifests/: manifest_gsp_gh100.c  manifest_gsp_gh100_fmodel.c  manifest_gsp_gh100_gsprm.c
src/conf_compute/policies/: policy_gsp_gh100_fmodel.ads.in  policy_gsp_gh100_gsprm.ads.in
src/conf_compute/rm/: entry.S  main.c
src/conf_compute/rm_proxy/: cmdmgmt.c  cmdmgmt.h  dispatcher_acr.c  dispatcher_rmproxy.c  dispatcher_spdm.c  entry.S  linkages.c  loader_entry.S  loader_main.c  lockdown.c  main.c  rm_proxy.h  sources.mk
src/conf_compute/shared/: entry_dispatcher.S  panic.c  rpc.c  sources.mk
src/conf_compute/spdm/: cc_dma.c  cc_spdm.c  entry.S  main.c  sources.mk
src/dmemva/config/: dmva-profiles.mk
src/dmemva/inc/: dmvaassert.h  dmvaattrs.h  dmvadma.h  dmvainstrs.h  dmvainterrupts.h  dmvamem.h  dmvarand.h  dmvaregs.h  dmvarw.h  dmvaselwrity.h  dmvatests.h  dmvautils.h  dmvavars.h  lw_ref_dev_lwdec_csb.h
src/dmemva/src/: Makefile  dmva_gsp_siggen.cfg  dmva_lwdec_siggen.cfg  dmva_pmu_siggen.cfg  dmva_sec2_siggen.cfg  make-profile.lwmk  makefile.lwmk
src/dmemva/utilities/: gen_class_os.pl
src/fbflcn/bios/: gh100_ate_bios.ld  gh100_ate_bios_references.ld
src/fbflcn/config/: Engines.pm  Features.pm  Makefile  fbfalcon-config  fbfalcon-config.cfg  fbfalcon-profiles.mk  makefile.mk
src/lwleg_acr/: acr.doxygen.cfg  makefile.lwmk
src/pmu/: doxygen.cfg
tools/mods/: .lwprojectname_default  Makefile  makedefs.inc  makelib.inc  makerule.inc  mods.def  modsbld.sh  modular_branch.inc
tools/mods/gpu/floorsweep/fs_lib/: .clang-format  CMakeLists.txt  CMakeSettings.json  Makefile  make_and_test.csh  srcfiles.mk
tools/mods/gpu/floorsweep/fs_lib/c_wrap/: CMakeLists.txt  fs_c_wrap.cpp  fs_c_wrap.def
tools/mods/gpu/floorsweep/fs_lib/chips/: ad102_config.h  ad103_config.h  ad104_config.h  ad106_config.h  ad107_config.h  gh100_config.h
tools/mods/gpu/floorsweep/fs_lib/contrib_sw/mods/: Makefile
tools/mods/gpu/floorsweep/fs_lib/include/: fs_lib.h
tools/mods/gpu/floorsweep/fs_lib/pylib/: fs_lib.py  gen_fslevel.py  gen_fsvalidconfigs.py  test_fs_lib.py
tools/mods/gpu/floorsweep/fs_lib/random_configs/: CMakeLists.txt  random_configs.cpp
tools/mods/gpu/floorsweep/fs_lib/scripts/: profile.sh
tools/mods/gpu/floorsweep/fs_lib/src/: CMakeLists.txt  SkylineSpareSelector.cpp  SkylineSpareSelector.h  etl_profile.h  fs_chip.cpp  fs_chip.h  fs_chip_ada.cpp  fs_chip_ada.h  fs_chip_core.cpp  fs_chip_core.h  fs_chip_factory.cpp  fs_chip_factory.h  fs_chip_hopper.cpp  fs_chip_hopper.h  fs_chip_with_cgas.cpp  fs_chip_with_cgas.h  fs_compute_only_gpc.cpp  fs_compute_only_gpc.h  fs_config.cpp  fs_container_utils.h  fs_lib.cpp  fs_utils.h
tools/mods/gpu/floorsweep/fs_lib/test/: CMakeLists.txt  fs_dump.cpp  fs_dump.h  fs_test.cpp  fs_test_ada.cpp  fs_test_components.cpp  fs_test_downbin_ada.cpp  fs_test_downbin_hopper.cpp  fs_test_legacy.cpp  fs_test_utils.cpp  fs_test_utils.h
tools/mucc/: Makefile  main.cpp  mucc.h  mucccore.cpp  mucccore.h  muccgalit1.cpp  muccgalit1.h  muccgalit1sim.cpp  muccgalit1sim.h  muccghlit1.cpp  muccghlit1.h  muccpgm.cpp  muccpgm.h  muccsim.cpp  muccsim.h  sample.mucc  sample_gh100.mucc  stringview.h
tools/spdm/: certificate.cpp  crypto.cpp  debug.cpp  makefile.lwmk  spdm_cppintfc.h
tools/ssldata/: Makefile  ssldata.cpp
tools/utilities/: check_global_data.pl  ifdef_checker.pl
tools/vcast/: vcast.mk
(+13134 files in other folders)
